--- a/pages/components/lists/lists.wxml
+++ b/pages/components/lists/lists.wxml
@@ -1,4 +1,20 @@
-<view wx:for-items="{{lists}}" class="wrapper">
+<view 
+wx:key="{{index}}" 
+id="{{index}}" 
+wx:for-items="{{lists}}" 
+class="wrapper"
+>
 	<text class="label">{{lists[index].inputTitle}}</text>
-	<input class="weui-input" placeholder="{{lists[index].placeholder}}"/>
+	<input
+  data-id="{{lists[index].name}}"
+  bindblur="bindKeyInput" 
+  type="{{lists[index].type}}" 
+  class="weui-input" 
+  maxlength="{{lists[index].maxlength}}" 
+  placeholder="{{lists[index].placeholder}}"
+  />
+  <view wx:if="{{hasArrow}}"class="navigator">
+    <view class="navigator-text">{{page}}</view>
+    <view class="navigator-arrow"></view>
+  </view>
 </view>
